Adding pokemon page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <div class="header-wrapper">
 
   <img src="../../../assets/pokmon-logo.png">
+<!--  <img src="../../../assets/pokeball.png">-->
 
 </div>
