--- a/src/app/components/pokemons-list/pokemons-list.component.html
+++ b/src/app/components/pokemons-list/pokemons-list.component.html
@@ -1,9 +1,12 @@
-<p>
-  pokemons-list works!
-</p>
-
 <div class="poke-list">
 
-<app-pokemon-item *ngFor="let poke of list$ | async" [pokemon]="poke"></app-pokemon-item>
+  <app-pokemon-item
+    *ngFor="let poke of list$ | async"
+    [pokemon]="poke"
+    [routerLink]="'/pokemon/'+ poke.id"
+    class="pokemon-from-list"
+  >
+
+  </app-pokemon-item>
 </div>
 
