--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<!--<router-outlet></router-outlet>-->
+
 <app-header></app-header>
-<app-pokemons-list></app-pokemons-list>
+<router-outlet></router-outlet>
+<!--<app-pokemons-list></app-pokemons-list>-->
