--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,6 +7,7 @@
   position: sticky;
   top: 0;
   overflow: hidden;
+  box-shadow: 2px 4px 8px rgba(128, 128, 128, 0.4);
 
   img {
     height: 60px;
