--- a/src/app/components/pokemons-list/pokemons-list.component.scss
+++ b/src/app/components/pokemons-list/pokemons-list.component.scss
@@ -21,6 +21,7 @@
     app-pokemon-item {
       &:hover {
         cursor: pointer;
+        background-color: darken(white, 10%);
       }
     }
 
