--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,9 +1,10 @@
-.header-wrapper{
+.header-wrapper {
   background-color: #385FAA;
   height: 70px;
   width: 100%;
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 60px 1fr 60px;
+  grid-template-areas: "back logo pokeball";
   position: sticky;
   top: 0;
   overflow: hidden;
@@ -11,5 +12,8 @@
 
   img {
     height: 60px;
+    grid-area: logo;
+
+    margin: auto auto;
   }
 }
