--- a/src/app/components/pokemons-list/pokemons-list.component.html
+++ b/src/app/components/pokemons-list/pokemons-list.component.html
@@ -1,13 +1,15 @@
-<div class="poke-list" *ngIf="list$ | async; else loader">
-
-  <app-pokemon-item
-    *ngFor="let poke of list$ | async"
-    [pokemon]="poke"
-    [routerLink]="'/pokemon/'+ poke.id"
-    class="pokemon-from-list"
-  >
-
-  </app-pokemon-item>
+  <button  *ngIf="list?.previous" class="button prev" (click)="getPrevSet()"><</button>
+  <button *ngIf="list?.next" class="button next" (click)="getNextSet()">></button>
+<div class="poke-list">
+  <ng-container *ngFor="let poke of list$ | async">
+    <app-pokemon-item
+      *ngIf="list$ | async; else loader"
+      [pokemon]="poke"
+      [routerLink]="'/pokemon/'+ poke.id"
+      class="pokemon-from-list"
+    >
+    </app-pokemon-item>
+  </ng-container>
 </div>
 <ng-template #loader>
   <app-loader></app-loader>
