--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-
 <app-header></app-header>
 <toaster-container></toaster-container>
-<router-outlet></router-outlet>
-<!--<app-pokemons-list></app-pokemons-list>-->
+<div [@routeAnimations]="o && o.activatedRouteData
+      && o.activatedRouteData['viewName']">
+  <router-outlet #o="outlet"></router-outlet>
+</div>
