--- a/src/app/components/pokemon-item/pokemon-item.component.scss
+++ b/src/app/components/pokemon-item/pokemon-item.component.scss
@@ -1,4 +1,3 @@
-
 :host {
   max-width: 300px;
   background-color: white;
@@ -7,9 +6,11 @@
   border-radius: 8px;
 
   .pokemon-image {
+    width: 300px;
+    height: 305px;
+
     img {
       padding: 24px;
-
       max-width: 300px;
     }
   }
@@ -18,19 +19,16 @@
     padding: 24px;
   }
 
-
 }
 
 :host-context(.pokemon-from-list) {
   .pokemon-data {
-    //border-top: 1px solid rgba(128, 128, 128, 0.5);
     padding: 24px;
     background-color: rgba(128, 128, 128, 0.3);
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
     color: white;
-
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 
