--- a/src/app/components/pokemons-list/pokemons-list.component.scss
+++ b/src/app/components/pokemons-list/pokemons-list.component.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables";
+
 :host {
   .poke-list {
-
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     overflow-y: auto;
@@ -26,6 +26,36 @@
     }
 
   }
+  .button {
+    position: fixed;
+    top: 90px;
+    border-radius: 50%;
+    padding: 12px 16px;
+  }
+  .prev {
+    left: 10px;
+  }
+.next {
+  right: 10px;
+}
+  //.buttons {
+  //  display: flex;
+  //  align-items: center;
+  //  justify-content: space-around;
+  //  //margin-bottom: 24px;
+  //  height: 60px;
+  //}
+  //.button-nav {
+  //  border-radius: 50%;
+  //  padding: 8px;
+  //  position: fixed;
+  //  top: 76px;
+  //
+  //  &:hover {
+  //
+  //  }
+//}
+
 }
 
 
