--- a/src/app/pages/pokemon-page/pokemon-page.component.html
+++ b/src/app/pages/pokemon-page/pokemon-page.component.html
@@ -1,4 +1,1 @@
-<p>
-  pokemon-page works!
-</p>
-<app-pokemon-item [pokemon]="pokemon"></app-pokemon-item>
+<app-pokemon-item [pokemon]="pokemon" class="pokemon-info"></app-pokemon-item>
