--- a/src/app/components/pokemon-item/pokemon-item.component.scss
+++ b/src/app/components/pokemon-item/pokemon-item.component.scss
@@ -1,13 +1,12 @@
 :host {
-  max-width: 300px;
-  background-color: white;
-  box-shadow: 2px 4px 8px rgba(128, 128, 128, 0.5);
-  margin: 0 auto;
-  border-radius: 8px;
+  margin: auto;
+  height: 100%;
 
   .pokemon-image {
     width: 300px;
     height: 305px;
+    margin: 0 auto;
+
 
     img {
       padding: 24px;
@@ -22,16 +21,28 @@
 }
 
 :host-context(.pokemon-from-list) {
-  .pokemon-data {
-    padding: 24px;
-    background-color: rgba(128, 128, 128, 0.3);
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: white;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+   .pokemon-data {
+     padding: 24px;
+     background-color: rgba(128, 128, 128, 0.3);
+     text-align: center;
+     text-transform: uppercase;
+     font-weight: bold;
+     color: white;
+     border-bottom-left-radius: 8px;
+     border-bottom-right-radius: 8px;
 
+   }
+
+ }
+
+
+:host-context(.pokemon-info) {
+
+  :host {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
 }
