--- a/src/app/components/pokemons-list/pokemons-list.component.html
+++ b/src/app/components/pokemons-list/pokemons-list.component.html
@@ -1,6 +1,6 @@
-  <button  *ngIf="list?.previous" class="button prev" (click)="getPrevSet()"><</button>
-  <button *ngIf="list?.next" class="button next" (click)="getNextSet()">></button>
-<div class="poke-list">
+<button *ngIf="list?.previous" class="button prev" (click)="getPrevSet()"><</button>
+<button *ngIf="list?.next" class="button next" (click)="getNextSet()">></button>
+<div class="poke-list" *ngIf="list$ | async">
   <ng-container *ngFor="let poke of list$ | async">
     <app-pokemon-item
       *ngIf="list$ | async; else loader"
