--- a/src/app/components/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.scss
@@ -1,13 +1,11 @@
 .pokeball{
   margin:0;
-  width: 120px;
   transform: scale(0.8) ;
-  //animation: spin 1.8s infinite linear;
 
-  //div {
-  //  margin: 0 auto;
-  //  padding: 0;
-  //}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   .top {
     background-color: #EB2224;
@@ -50,7 +48,21 @@
 .pokemon {
   position: relative;
   top: -180px;
-  left: 80px;
   z-index: -1;
   transform: scale(1.8);
+}
+
+.poke-name {
+  font-weight: bold;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.buttons {
+display: flex;
+  justify-content: center;
+  .button {
+    margin-right: 20px;
+  }
 }
