--- a/src/app/components/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="pokeball" [id]="pokemon.id" (click)="clickEvent($event)">
+<div class="pokeball" [id]="pokemon.id" (click)="clickEvent()">
   <div class="top" [ngClass]="isOpen ? 'open' : ''">
     <div class="middle_circle">
       <div class="white_in"></div>
